Fix tooltip malposition on Firefox

--- a/packages/text/Tooltip.styl
+++ b/packages/text/Tooltip.styl
@@ -29,6 +29,7 @@ div.Tooltip
     position relative
     z-index 10
     padding .5em
+    width -moz-max-content
     width max-content
     min-width 5em
     max-width 20em
